--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crptly</title>
+    <title>Cryptly</title>
     <link rel="stylesheet" href="public/styles/style.css" />
     <link rel="stylesheet" href="sass/texts.scss">
     <link rel="stylesheet" href="sass/cursor.scss">
@@ -48,8 +48,7 @@
         </nav>
 
         <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
-            <p
-                class="header-text text-black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
+            <p class="header-text text-black dark:text-white font-caudex text-xl sm:text-2xl md:text-3xl lg:text-lg4xl xl:text-lg5xl 2xl:text-6xl">
                 Cryptly: Creating true experience with Cryptocurrency.
             </p>
 
@@ -64,8 +63,14 @@
             </div>
         </section>
 
-        <section class="crptly mt-10">
-            <div class="overview space-y-5 sm:space-y-6 2xl:space-y-7">
+        <section class="cryptly mt-10">
+            <div class="cryptly-image">
+                <a href="../assets/images/Cryptly.png">
+                    <img src="../assets/images/Cryptly.png" alt="">
+                </a>
+            </div>
+
+            <div class="overview mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Overview
                 </p>
@@ -151,12 +156,12 @@
             <div class="design-process mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
-                    Design
-                    process</p>
+                    Design process
+                </p>
 
                 <div class="design-process-image">
-                    <a href="../assets/images/design process.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/design process.png" alt=""
+                    <a href="../assets/images/Cryptly Design Process.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Design Process.png" alt=""
                             class="lg:mt-8"></a>
                 </div>
             </div>
@@ -164,8 +169,8 @@
             <div class="swot-analysis mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p
                     class="swot-analysis-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
-                    SWOT
-                    analysis</p>
+                    SWOT analysis
+                </p>
 
                 <p
                     class="swot-analysis-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
@@ -175,8 +180,8 @@
                 </p>
 
                 <div class="swot-analysis-image">
-                    <a href="../assets/images/userflow 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/userflow 1.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Swot Analysis.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Swot Analysis.png" alt=""></a>
                 </div>
             </div>
 
@@ -185,8 +190,8 @@
                     User flow</p>
 
                 <div class="userflow-images">
-                    <a href="../assets/images/userflow 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/userflow 1.png" alt=""></a>
+                    <a href="../assets/images/Cryptly User Flow.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly User Flow.png" alt=""></a>
                 </div>
             </div>
 
@@ -204,10 +209,10 @@
                 </p>
 
                 <div class="users grid gap-y-3 lg:space-y-5">
-                    <a href="../assets/images/customer alex.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/customer alex.png" alt=""></a>
-                    <a href="../assets/images/customer jane.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/customer jane.png" alt=""></a>
+                    <a href="../assets/images/Cryptly User 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly User 1.png" alt=""></a>
+                    <a href="../assets/images/Cryptly User 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly User 2.png" alt=""></a>
                 </div>
             </div>
 
@@ -226,12 +231,12 @@
 
                 <div class="wireframes-image space-y-3 lg:space-y-5">
                     <div class="wireframe-image">
-                        <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/wireframes.png" alt=""></a>
+                        <a href="../assets/images/Cryptly Wireframe 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Wireframe 1.png" alt=""></a>
                     </div>
                     <div class="wireframe-image">
-                        <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/wireframes.png" alt=""></a>
+                        <a href="../assets/images/Cryptly Wireframe 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Wireframe 2.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -248,8 +253,8 @@
                 </p>
 
                 <div class="splash-screen-image">
-                    <a href="../assets/images/splash screen.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/splash screen.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Splash Screen.png "><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Splash Screen.png  " alt=""></a>
                 </div>
             </div>
 
@@ -269,13 +274,12 @@
                 </p>
 
                 <div class="onboarding-image">
-                    <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/onboarding.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Onboarding.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Onboarding.png" alt=""></a>
                 </div>
             </div>
 
-            <div
-                class="navigation-and-homepage mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 place-items-center md:gap-x-10 lg:gap-x-0">
+            <div class="navigation-and-homepage mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid grid-cols-2 place-items-center md:gap-x-10 lg:gap-x-0">
                 <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pr-10">
                     <p
                         class="navigation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
@@ -295,8 +299,8 @@
                 </div>
 
                 <div class="image flex justify-center items-start">
-                    <a href="../assets/images/navigation.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/navigation.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Navigation-Homepage.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Navigation-Homepage.png" alt=""></a>
                 </div>
             </div>
 
@@ -322,27 +326,23 @@
                 </div>
 
                 <div class="send-coins-image">
-                    <a href="../assets/images/navigation.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/navigation.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Send Coins.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Send Coins.png" alt=""></a>
                 </div>
             </div>
 
-            <div
-                class="receiving-coins mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid place-items-center grid-cols-2 md:gap-x-10 lg:gap-x-0">
-
+            <div class="receiving-coins mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7 md:grid place-items-center grid-cols-2 md:gap-x-10 lg:gap-x-0">
                 <div class="receiving-coins-image">
-                    <a href="../assets/images/error handling.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/error handling.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Recieving Coins.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Recieving Coins.png" alt=""></a>
                 </div>
 
-                <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pr-10">
-                    <p
-                        class="receiving-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <div class="texts space-y-5 sm:space-y-6 2xl:space-y-7 lg:pl-10">
+                    <p class="receiving-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                         Recieving coins
                     </p>
 
-                    <p
-                        class="receiving-coins -details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
+                    <p class="receiving-coins -details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                         Now it’s something you really don’t have to worry about. You may never really need to come to
                         this
                         page anymore. Now you
@@ -354,54 +354,36 @@
             </div>
 
             <div class="receive-design mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p class="header-textfont-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">Receive</p>
+                <p class="header-textfont-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Portfolio
+                </p>
 
-                <p
-                    class="receive-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
+                <p class="receive-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:mb-7">
                     Many other parts of the UI got redesigned as one of the goal is to give a full visual redesign of
                     the app.
                 </p>
 
                 <div class="receive-image">
-                    <a href="../assets/images/better visual.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/better visual.png" alt=""></a>
+                    <a href="../assets/images/Cryptly Portfolio.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Portfolio.png" alt=""></a>
                 </div>
             </div>
 
-            <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p
-                    class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
-                    Conclusion
+            <div class="recovery mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
+                <p class="recovery-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                    Recovery
                 </p>
 
-                <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
-                    The focus of this redesign was centered around delivering an all-new experience on the GTBank
-                    application. Based on the
-                    research and feedback I had gathered, it was certain that the UI of the app was one of the major
-                    channels causing many
-                    setbacks for the app's performance and a fix would really help users interact better. I learned the
-                    newer ways to see
-                    problems and how to solve them, the most effective part of my contribution was looking for an easier
-                    way to covey the
-                    exact same information on the existing design without losing any key information, which I am sure I
-                    was able to achieve
-                    after testing the design out with some users
+                <p class="recovery-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
+                    Now it’s something you really don’t have to worry about. You may never really need to come to this page anymore. Now you
+                    can as well keep your phone at home and still share your address. All you need is your Cryptly username, also every
+                    token or coin is also tied to the username.
                 </p>
 
-                <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-8">
-                    I am happy I was able to work on a project like this, I enjoyed every brainstorming session I had
-                    with my partner on
-                    this project as well as the audience I interviewed as everyone was truly willing to give their
-                    sincere response and
-                    feedback throughout the entire design process.
-                </p>
-
-                <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10">
-                    I would love to workon a web version of the GTBank app as that as well needs a total revamp.
-                </p>
+                <div class="receive-image">
+                    <a href="../assets/images/Cryptly Recovery.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Cryptly Recovery.png" alt=""></a>
+                </div>
             </div>
         </section>
     </div>
