--- a/src/index.html
+++ b/src/index.html
@@ -24,50 +24,50 @@
         class="nav-container font-sf dark:text-white py-4 sm:py-6 lg:py-7 xl:py-9 2xl:py-12 flex justify-between items-center tracking-widest">
         <div class="logo">
           <a class="flex" href="index.html">
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               O
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter z text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               Z
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter e text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               E
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter n text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               N
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               U
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               A
             </p>
 
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm ml-1">
+            <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm ml-1">
               O
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter l text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               L
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter u text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               U
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter w text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               W
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter a text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               A
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter t text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               T
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter o text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               O
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter b text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               B
             </p>
-            <p class="text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
+            <p class="letter i text-tiny lg:text-tiny xl:text-xs 2xl:text-sm">
               I
             </p>
           </a>
@@ -137,10 +137,12 @@
           </div>
 
           <p
-            class="hero-details-text font-sf text-xs md:text-sm xl:text-lg 2xl:text-2xl text-left text-primary md:mb-5 lg:mb-10 lg:leading-7 xl:leading-8 2xl:leading-9 2xl:leading-10 md:w-3/5 2xl:pr-5">
-            I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital
-            user interfaces. I am passionate about solving complex problems through data-driven processes that
-            translate business objectives into solutions, putting empathy for the user as a key ingredient.
+            class="hero-details-text font-sf text-xs md:text-sm xl:text-lg 2xl:text-2xl text-left text-primary md:mb-5 lg:mb-10 lg:leading-7 xl:leading-8 2xl:leading-10 md:w-3/5 2xl:pr-5">
+            I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital user
+            interfaces.I
+            am passionate about solving complex problems through data- driven processes that translate business
+            objectives into
+            solutions, putting empathy for the user as a key ingredient.
           </p>
 
           <div class="floating-circle relative md:mb-10 lg:mb-20">
@@ -611,7 +613,7 @@
 
           </div>
 
-          <div class="crptly lg:mb-0">
+          <div class="cryptly lg:mb-0">
             <p class="num font-caudex text-num text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">03
             </p>
 
@@ -620,20 +622,20 @@
               <div
                 class="div space-y-1 md:space-y-2 xl:space-y-3 2xl:space-y-2 transform transition duration-500 hover:-translate-y-9 sm:hover:-translate-y-14 md:hover:-translate-y-14 lg:hover:-translate-y-20 xl:hover:-translate-y-28">
                 <h1
-                  class="crptly-header-dummy font-caudex text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white overflow-x-hidden">
-                  Crptly
+                  class="cryptly-header-dummy font-caudex text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white overflow-x-hidden">
+                  Cryptly
                 </h1>
 
                 <h1
-                  class="crptly-header-text font-caudex text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white overflow-x-hidden">
-                  <a href="crptly.html">
-                    Crptly
+                  class="cryptly-header-text font-caudex text-xl sm:text-2xl md:text-lg3xl lg:text-5xl xl:text-6xl 2xl:text-lg6xl tracking-tighter dark:text-white overflow-x-hidden">
+                  <a href="cryptly.html">
+                    Cryptly
                   </a>
                 </h1>
               </div>
             </div>
 
-            <p class="crptly-subtext font-sf text-primary text-xs lg:text-xs xl:text-base 2xl:text-lg">
+            <p class="cryptly-subtext font-sf text-primary text-xs lg:text-xs xl:text-base 2xl:text-lg">
               Crypto application for the new.
             </p>
 
@@ -925,7 +927,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
   <script type="module" src="js/index.js"></script>
-
+  <script type="module" src="js/nav.js"></script>
+  <script type="module" src="js/text.js"></script>
 </body>
 
 </html>
