--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -69,8 +69,7 @@
 
         <section class="jumiar mt-10">
             <div class="mobile-commerce-study space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p
-                    class="mobile-commerce-study-text font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:pb-10 text-primary">
+                <p class="mobile-commerce-study-text font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:pb-10 text-primary">
                     Mobile commerce will outpace non-mobile commerce in 2021. In 2021, mobile commerce sales will
                     account for
                     more than half of total e-commerce sales. Today, one-third of purchasing decisions are influenced by
@@ -97,8 +96,7 @@
                     Why Jumia
                 </p>
 
-                <p
-                    class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
+                <p class="why-jumia-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     Jumia is the leading pan-African e-commerce platform active across 11 countries on the continent.
                     The
                     platform consists
@@ -120,9 +118,9 @@
                 </p>
 
                 <div class="why-jumia-image pt-5 lg:mt-10 lg:mb-32">
-                    <!-- <a data-lightbox="mygallery" href="../assets/images/Rectangle 5 (11).png"><img
-                        class="rounded-2xl lg:rounded-3xl" src="../assets/images/Rectangle 5 (11).png"
-                            alt=""></a> -->
+                    <a href="../assets/images/Jumiar Analytics.png">
+                        <img src="../assets/images/Jumiar Analytics.png" alt="">
+                    </a>
                 </div>
 
                 <p
