--- a/src/paysure.html
+++ b/src/paysure.html
@@ -64,7 +64,7 @@
             </div>
         </section>
 
-        <section class="crptly mt-10">
+        <section class="paysure mt-10">
             <div class="overview space-y-5 sm:space-y-6 2xl:space-y-7">
                 <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Overview
@@ -112,8 +112,8 @@
                     process</p>
 
                 <div class="design-process-image">
-                    <a href="../assets/images/design process.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/design process.png" alt=""
+                    <a href="../assets/images/Paysure Design Process.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Design Process.png" alt=""
                             class="lg:mt-8"></a>
                 </div>
             </div>
@@ -123,8 +123,8 @@
                     User flow</p>
 
                 <div class="userflow-images">
-                    <a href="../assets/images/userflow 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/userflow 1.png" alt=""></a>
+                    <a href="../assets/images/Paysure User Flow.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure User Flow.png" alt=""></a>
                 </div>
             </div>
 
@@ -141,14 +141,16 @@
                     High-Fidelity wireframes using some dummy texts and icons where needed.
                 </p>
 
-                <div class="wireframes-image space-y-3 lg:space-y-5">
+                <div class="wireframes-image space-y-3 lg:space-y-3">
                     <div class="wireframes-image">
-                        <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/wireframes.png" alt=""></a>
+                        <a href="../assets/images/Paysure Wireframe 1.png"><img
+                                class="rounded-2xl lg:rounded-3xl w-full"
+                                src="../assets/images/Paysure Wireframe 1.png" alt=""></a>
                     </div>
                     <div class="wireframes-image">
-                        <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/wireframes.png" alt=""></a>
+                        <a href="../assets/images/Paysure Wireframe 2.png"><img
+                                class="rounded-2xl lg:rounded-3xl w-full"
+                                src="../assets/images/Paysure Wireframe 2.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -165,49 +167,65 @@
                     potential testers of the app. I proceeded to design a simple design style guide for the application.
                 </p>
 
-                <div class="colors-and-typography-image space-y-3 lg:space-y-5">
+                <div class="colors-and-typography-image space-y-3 lg:space-y-3">
                     <div class="colors-and-typography-image">
-                        <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/onboarding.png" alt=""></a>
+                        <a href="../assets/images/Paysure Colors.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Colors.png" alt=""></a>
                     </div>
+
                     <div class="colors-and-typography-image">
-                        <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/onboarding.png" alt=""></a>
+                        <a href="../assets/images/Paysure Texts.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                                class="rounded-2xl lg:rounded-3xl" src="../assets/images/Paysure Texts.png" alt=""></a>
                     </div>
                 </div>
             </div>
 
             <div class="visual-design mt-24 md:mt-32 xl:mt-40 lg:my-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p
-                    class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Visual
                     Design</p>
 
-                <p
-                    class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
+                <p class="visual-design-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
                     After several rounds of iterations on the wireframe, we designed the high-fidelity screens.
                 </p>
 
-                <div class="visual-design-images w-full space-y-3 lg:space-y-5">
-                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
-                        src="../assets/images/gt visual design 1.png" alt="">
-                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
-                        src="../assets/images/gt visual design 2.png" alt="">
-                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
-                        src="../assets/images/gt visual design 1.png" alt="">
-                    <img class="rounded-2xl lg:rounded-3xl w-full" class="rounded-2xl lg:rounded-3xl"
-                        src="../assets/images/gt visual design 2.png" alt="">
+                <div class="visual-design-images w-full space-y-3 lg:space-y-3">
+                    <div class="paysure-visual-design-container">
+                        <a href="../assets/images/Paysure Visual Design 1.png">
+                            <img class="rounded-2xl lg:rounded-3xl w-full"
+                                src="../assets/images/Paysure Visual Design 1.png" alt="">
+                        </a>
+                    </div>
+
+                    <div class="paysure-visual-design-container">
+                        <a href="../assets/images/Paysure Visual Design 2.png">
+                            <img class="rounded-2xl lg:rounded-3xl w-full"
+                                src="../assets/images/Paysure Visual Design 2.png" alt="">
+                        </a>
+                    </div>
+
+                    <div class="paysure-visual-design-container">
+                        <a href="../assets/images/Paysure Visual Design 3.png">
+                            <img class="rounded-2xl lg:rounded-3xl"
+                                src="../assets/images/Paysure Visual Design 3.png" alt="">
+                        </a>
+                    </div>
+
+                    <div class="paysure-visual-design-container">
+                        <a href="../assets/images/Paysure Visual Design 4.png">
+                            <img class="rounded-2xl lg:rounded-3xl w-full"
+                                src="../assets/images/Paysure Visual Design 4.png" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
 
             <div class="conclusion mt-24 md:mt-32 xl:mt-40 space-y-5 sm:space-y-6 2xl:space-y-7">
-                <p
-                    class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
+                <p class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
                     Conclusion
                 </p>
 
-                <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
+                <p class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
                     The UI design was framed based on data collected over a long period of time and multiple test
                     sessions. The design was
                     made to be minimal, well organized flows, and feature centered to meet the users needs. As a result,
